--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <body>
     <div class="flex-box container-box">
       <div class="content-box">
-        <img src="images/image-qr-code.png">
+        <img src="images/image-qr-code.png" alt="qrcode image">
         <h1>Improve your front-end skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
